deployment/kubernetes/circuit-breakers/cb-api-gateway.yaml
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: cb-api-gateway
  namespace: rota-maravilhosa
spec:
  host: api-gateway
  trafficPolicy:
    connectionPool:
      tcp:
        maxConnections: 50
      http:
        http1MaxPendingRequests: 100
        maxRequestsPerConnection: 10
        maxRetries: 2
    outlierDetection:
      consecutive5xxErrors: 5
      interval: 30s
      baseEjectionTime: 60s
      maxEjectionPercent: 50
