deployment/kubernetes/circuit-breakers/cb-data-service-uc4.yaml

apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: cb-data-service-uc4
  namespace: rota-maravilhosa
spec:
  host: data-service-uc4
  trafficPolicy:
    connectionPool:
      tcp:
        maxConnections: 20
      http:
        http1MaxPendingRequests: 50
        maxRequestsPerConnection: 10
        maxRetries: 2
    outlierDetection:
      consecutive5xxErrors: 5
      interval: 30s
      baseEjectionTime: 60s
