deployment/kubernetes/circuit-breakers/cb-data-service-uc8-uc11.yaml
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: cb-data-service-uc8-uc11
  namespace: rota-maravilhosa
spec:
  host: data-service-uc8-uc11
  trafficPolicy:
    connectionPool:
      tcp:
        maxConnections: 15
      http:
        http1MaxPendingRequests: 30
        maxRequestsPerConnection: 10
        maxRetries: 2
    outlierDetection:
      consecutive5xxErrors: 5
      interval: 30s
      baseEjectionTime: 60s
