deployment/kubernetes/circuit-breakers/cb-prediction-service-uc5-uc6.yaml
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: cb-prediction-uc5-uc6
  namespace: rota-maravilhosa
spec:
  host: prediction-service-uc5-uc6
  trafficPolicy:
    connectionPool:
      tcp:
        maxConnections: 10
      http:
        http1MaxPendingRequests: 20
        maxRequestsPerConnection: 5
        maxRetries: 1
    outlierDetection:
      consecutive5xxErrors: 3
      interval: 20s
      baseEjectionTime: 30s
