deployment/kubernetes/circuit-breakers/cb-route-service-uc7.yaml
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: cb-route-service-uc7
  namespace: rota-maravilhosa
spec:
  host: route-service-uc7
  trafficPolicy:
    connectionPool:
      tcp:
        maxConnections: 25
      http:
        http1MaxPendingRequests: 50
        maxRequestsPerConnection: 10
        maxRetries: 2
    outlierDetection:
      consecutive5xxErrors: 5
      interval: 30s
      baseEjectionTime: 60s
